[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "brisbane_sunset"
description = "Sunset times in Brisbane, CA"
requires-python = ">=3.12"
version = "0.1"
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
optional-dependencies = {dev = { file = ["requirements-dev.txt"] }}

[project.scripts]
sunset-view-tif = "brisbane_sunset:view_tif"
sunset-subset-tif = "brisbane_sunset:subset_tif"
sunset-reproject-tif = "brisbane_sunset:reproject_tif"
sunset-run = "brisbane_sunset:run_combined"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]